Changes from feedback.
- Improved javadoc.
- Single copyright date in new files.
- Informative string in exception that is thrown.
- Shortened the test name.